Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
 <p>RoboLib is a remake of the <a href="https://usfirst.collab.net/sf/sfmain/do/viewProject/projects.wpilib" title="WPILib">WPILib</a> libraries provided by <a href="http://www.usfirst.org/roboticsprograms/frc" title="FIRST FRC">FIRST</a> for all frc robots. The main reason we decided to remake it was to optimize it. Currently we only have a Java version, because thats the language this library was created for. We will however convert it to C++ and maybe Python later on, if it become popular enough.</p>
 
 <h3>
+<a id="documentation" class="anchor" href="#documentation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documentation</h3>
+
+<p><a href="http://robolib.github.io/robolibj/docs" title="RoboLibJ Documentation">RoboLibJ - RoboLib Java version</a></p>
+
+<h3>
 <a id="why-is-this-a-thing" class="anchor" href="#why-is-this-a-thing" aria-hidden="true"><span class="octicon octicon-link"></span></a>Why is this a thing?</h3>
 
 <ul>
